2015-06-15         [RELEASE] Release of duplicate_finder 0.2.0 (Dirk Wenzel)
2015-05-05 f73a0dc [TASK] default hash function changed to sha256 (produces 64 characters) (Dirk Wenzel)
2015-05-05 a5ce27e [BUGFIX] default TypoScript value for fuzzyHashing/enabled changed from FALSE to 0. (FALSE is interpreted as string and isFuzzyHashing enabled returns TRUE) (Dirk Wenzel)
2015-05-05 f740565 [BUGFIX] cast value from TypoScript to bool (Dirk Wenzel)
2015-04-18 bf8d3b9 [TASK] unit tests for DuplicateRegistry added (Dirk Wenzel)
2015-04-18 9957fbb [TASK] unit test adapted to changed signature of update method (Dirk Wenzel)
2015-04-08 be0f294 [BUGFIX] fixed error caused by wrong parameter for hashRepository->update (Dirk Wenzel)
2015-04-08 2f8ea05 [TASK] use hashRepository->contains instead of isDuplicate. Unit tests adapted. (Dirk Wenzel)
2015-04-08 a23c49e [TASK] duplicate finder does not longer support object. Replace by record (array) (Dirk Wenzel)
2015-04-08 260c49e [BUGFIX] fixed error caused by missing use statement for GeneralUtility (Dirk Wenzel)
2015-04-08 0a0b4eb [TASK] DuplicateFinder now uses CachedHashRepository for looking up hashes. Obsolete methods removed, unit tests adapted. (Dirk Wenzel)
2015-04-07 41b7242 [BUGFIX] fixed error in method contains which prevented proper lookup in database Unit test simplified. (Dirk Wenzel)
2015-04-07 e61d66d [TASK] unit tests for CachedHashRepository added (Dirk Wenzel)
2015-04-07 079f0e1 [TASK] use methods hasHashTable and hasIndexTable instead of isset (Dirk Wenzel)
2015-04-07 5fd523f [TASK] use clear instead of removeByTable (Dirk Wenzel)
2015-04-07 96f6a62 [TASK] use method hashHashTable instead of isset (Dirk Wenzel)
2015-04-07 5515963 [BUGFIX] error fixed which prevented from detection if an index is set (Dirk Wenzel)
2015-04-07 ae2b72a [BUGFIX] several typos corrected (Dirk Wenzel)
2015-04-07 037ab4d [TASK] unit tests for CachedHashRepository added (Dirk Wenzel)