@@ -1,3 +1,7 @@
+2015-08-31         [RELEASE] Release of duplicate_finder 0.3.0 (Dirk Wenzel)
+2015-07-07 eba9a6d [TASK] failing unit tests fixed (Dirk Wenzel)
+2015-06-29 b3d5a5b [BUGFIX] illegal line break before namespace declaration removed (Dirk Wenzel)
+
 2015-06-15         [RELEASE] Release of duplicate_finder 0.2.0 (Dirk Wenzel)
 2015-05-05 f73a0dc [TASK] default hash function changed to sha256 (produces 64 characters) (Dirk Wenzel)
 2015-05-05 a5ce27e [BUGFIX] default TypoScript value for fuzzyHashing/enabled changed from FALSE to 0. (FALSE is interpreted as string and isFuzzyHashing enabled returns TRUE) (Dirk Wenzel)
